--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
     <!-- HEADER -->
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="home-page" class="anchor" href="#home-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home Page</h1>
-
-<p><a href="https://www.google.com">Google</a> | <a href="https://www.facebook.com">Facebook</a></p>
-      </section>
-    </div>
+    <h1>Home Page</h1>
+    <p><a href="https://www.google.com">Google</a> | <a href="https://www.facebook.com">Facebook</a></p>
 
     <!-- FOOTER  -->
 
