--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body onload="startTime()">
 
     <div id="txt">
+        <a href="https://access.bah.com/my.policy">Access</a>
     </div>
     <a href="https://access.bah.com/my.policy">Access</a>
 </body>
