--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 </head>
 
 <body onload="startTime()">
-
-    <div id="txt">
+    a
+    <div id="txt"> b
         Quick Refs
     </div>
+    c
 </body>
 </html>
