--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 </head>
 
 <body onload="startTime()">
-    a
-    <div id="txt"> b
-        Quick Refs
-    </div>
-    c
+    ***Quick Refs***
+      <br>| 
+      <a href="http://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1">HUDS</a> |
+      <a href="http://www.weather.com/weather/tenday/02138">Weather MA</a> |
 </body>
 </html>
