--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </script>
 </head>
 
-<body onload="startTime()">
+<body>
+    <div onload="startTime()">
+    </div>
     ***Quick Refs***
       <br>| 
       <a href="http://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1">HUDS</a> |
