--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-    <div onload="startTime()">
-    </div>
+    <p onload="startTime()"> a
+    </p>
     ***Quick Refs***
       <br>| 
       <a href="http://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1">HUDS</a> |
