--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     </script>
 </head>
 
-<body>
-    <p onload="startTime()"> a
-    </p>
+<body onload="startTime()">
+    <div id="txt">Clock</div>
     ***Quick Refs***
       <br>| 
       <a href="http://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1">HUDS</a> |
