--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 </head>
 
 <body onload="startTime()">
-    <p style="font-size:30px">
+    <center>
     <div id="txt">Clock</div>
     
+    <p style="font-size:30px">
     ***Quick Refs***
       <br>| 
       <a href="http://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1">HUDS</a> |
@@ -64,5 +65,6 @@
       <a href="https://boozallen.onedrive.com/">OneDrive</a> | 
       <a href="http://boozallen.sharepoint.com/">Wifi</a> |
     </p>
+    </center>
 </body>
 </html>
