--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body onload="startTime()">
     <center>
-    <div id="txt">Clock</div>
+    <div id="txt" style="font-size:40px">Clock</div>
     
     <p style="font-size:30px">
     ***Quick Refs***
