--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Homepage</title>
+    <!-- Simple clock from http://www.w3schools.com/js/tryit.asp?filename=tryjs_timing_clock -->
     <script>
     function startTime() {
         var today = new Date();
@@ -23,9 +24,9 @@
 
 <body onload="startTime()">
     <center>
-    <div id="txt" style="font-size:40px">Clock</div>
+    <div id="txt" style="font-size:48px">Clock</div>
     
-    <p style="font-size:30px">
+    <p style="font-size:24px">
     ***Quick Refs***
       <br>| 
       <a href="http://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1">HUDS</a> |
