--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <center>
     <br>
     ----------------------------------
-    <div id="date"></div>
+    <p id="date"></p>
     <br>
     <div id="time" style="font-size:48px">Clock</div>
     ----------------------------------
