--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <a href="https://canvas.harvard.edu/courses/5666">CS 283</a> | 
       <a href="https://canvas.harvard.edu/courses/5642">AM 115</a> | 
       <a href="https://canvas.harvard.edu/courses/6580">AM 203</a> | 
+      <a href="https://piazza.com/">Piazza</a> |
     
     <br><br>
     *  *  *
@@ -57,6 +58,7 @@
     <br><br>
     *  *  *
       <br>| 
+      <a href="http://facebook.college.harvard.edu//searchform">College FB</a> | 
       <a href="http://harvard.philo.com/">Philo</a> | 
       <a href="https://hrapps.cadm.harvard.edu/psp/psftprd/?cmd=login&languageCd=ENG">PeopleSoft</a> | 
       <a href="http://www.library.hbs.edu/go/capitaliq.html">CapIQ</a> | 
