--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
       <a href="http://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1">HUDS</a> |
       <a href="http://www.weather.com/weather/tenday/02138">Weather MA</a> | 
       <a href="http://harvard.transloc.com/">Shuttle Tracker</a> |
+      <a href="http://my.harvard.edu/">my.harvard</a> |
     
     <br><br>
     *  *  *
       <br>| 
-      <a href="http://cs109.github.io/2015/">CS 109</a> |  
-      <a href="https://canvas.harvard.edu/courses/5666">CS 283</a> | 
-      <a href="https://canvas.harvard.edu/courses/5642">AM 115</a> | 
-      <a href="https://canvas.harvard.edu/courses/6580">AM 203</a> | 
+      <a href="https://canvas.harvard.edu/courses/9622">CS 236r</a> | 
+      <a href="https://canvas.harvard.edu/courses/9400">English 190gn</a></a> | 
+      <a href="https://canvas.harvard.edu/courses/11340">SPU 22</a> | 
+      <a href="https://canvas.harvard.edu/courses/9485">Ec 1760</a> | 
+      <a href="https://canvas.harvard.edu/courses/9603">CS 124</a> | 
+      <a href="https://canvas.harvard.edu/courses/10806">VES 172m</a> |
       <a href="https://piazza.com/">Piazza</a> |
     
     <br><br>
