debugged page build fail

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     *  *  *
       <br>| 
       <a href="https://canvas.harvard.edu/courses/9622">CS 236r</a> | 
-      <a href="https://canvas.harvard.edu/courses/9400">English 190gn</a></a> | 
+      <a href="https://canvas.harvard.edu/courses/9400">English 190gn</a> | 
       <a href="https://canvas.harvard.edu/courses/11340">SPU 22</a> | 
       <a href="https://canvas.harvard.edu/courses/9485">Ec 1760</a> | 
       <a href="https://canvas.harvard.edu/courses/9603">CS 124</a> | 
-      <a href="https://canvas.harvard.edu/courses/10806">VES 172m</a> |
+      <a href="https://canvas.harvard.edu/courses/10806">VES 172m</a> | 
       <a href="https://piazza.com/">Piazza</a> |
     
     <br><br>
