--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <br><br>
     *  *  *
       <br>| 
-      <a href="https://canvas.harvard.edu/courses/9622">CS 236r</a> | 
+      <a href="https://canvas.harvard.edu/courses/9622/pages/schedule">CS 236r</a> | 
       <a href="https://canvas.harvard.edu/courses/9400">English 190gn</a> | 
       <a href="https://canvas.harvard.edu/courses/11340">SPU 22</a> | 
       <a href="https://canvas.harvard.edu/courses/9485">Ec 1760</a> | 
