--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
     *  *  *
       <br>| 
       <a href="https://www.google.com">Google</a> | 
-      <a href="https://tolconnected.bah.com/">TOL</a> | 
-      <a href="http://outlook.com/owa/bah.com">Webmail</a> | 
-      <a href="https://access.bah.com/my.policy">Access</a> | 
+      <a href="https://mail.google.com/tasks/ig?pli=1">Tasks</a> | 
+      <a href="https://github.com/">GitHub</a> | 
+      <a href="https://groupme.com/">GroupMe</a> | 
+      <a href="http://www.mln.lib.ma.us/">Library</a> |
     
     <br><br>
     *  *  *
       <br>| 
-      <a href="https://github.com/">GitHub</a> | 
-      <a href="https://groupme.com/">GroupMe</a> | 
-      <a href="http://www.mln.lib.ma.us/">Library</a> |
+      <a href="https://tolconnected.bah.com/">TOL</a> | 
+      <a href="https://sso.bah.com/idp/startSSO.ping?PartnerSpId=CONCUR&IdpAdapterId=IWA">EOL</a> | 
+      <a href="http://outlook.com/owa/bah.com">Webmail</a> | 
+      <a href="https://access.bah.com/my.policy">Access</a> | 
     
     <br><br>
     *  *  *
