--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <a href="https://github.com/">GitHub</a> | 
       <a href="https://www.sharelatex.com/project">ShareTex</a> |
       <a href="https://drive.google.com/drive/my-drive">Drive</a> |
+      <a href="https://accounts.google.com/ServiceLogin?service=mail">Gmail</a> | 
     
     <br><br>
     *  *  *
