--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <br><br>
     *  *  *
       <br>| 
+      <a href="https://keep.google.com/#home">Keep</a> |   
       <a href="https://mail.google.com/tasks/ig?pli=1">Tasks</a> | 
       <a href="https://github.com/">GitHub</a> | 
       <a href="https://www.sharelatex.com/project">ShareTex</a> |
