--- a/index.html
+++ b/index.html
@@ -41,20 +41,21 @@
     <br><br>
     *  *  *
       <br>| 
-      <a href="https://groupme.com/">GroupMe</a> | 
+      <a href="https://keep.google.com/#home">Keep</a> |  
       <a href="https://www.messenger.com/">Messenger</a> | 
-      <a href="https://www.facebook.com">Facebook</a> |
-      <a href="https://www.google.com/">Google</a> |
+      <a href="https://drive.google.com/drive/my-drive">Drive</a> |
+      <a href="https://mail.google.com/">Gmail</a> | 
+      <a href="https://calendar.google.com/">Calendar</a> | 
     
     <br><br>
     *  *  *
-      <br>| 
-      <a href="https://keep.google.com/#home">Keep</a> |   
+      <br>|  
+      <a href="https://groupme.com/">GroupMe</a> | 
       <a href="https://mail.google.com/tasks/ig?pli=1">Tasks</a> | 
+      <a href="https://www.facebook.com">Facebook</a> |
+      <a href="https://www.google.com/">Google</a> |
       <a href="https://github.com/">GitHub</a> | 
       <a href="https://www.sharelatex.com/project">ShareTex</a> |
-      <a href="https://drive.google.com/drive/my-drive">Drive</a> |
-      <a href="https://accounts.google.com/ServiceLogin?service=mail">Gmail</a> | 
     
     <br><br>
     *  *  *
