--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a href="https://github.boozallencsn.com">CSN</a> | 
         <a href="https://outlook.com/owa/bah.com">Webmail</a> | 
         <a href="https://access.bah.com/my.policy">Access</a> | 
-        <a href="https://portal.office.com/">Office Portal</a>
+        <a href="https://portal.office.com/">Office Portal</a> |
         
     
     <br><br>
