--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <a href="https://tolconnected.bah.com/">TOL</a> | 
         <a href="https://sso.bah.com/idp/startSSO.ping?PartnerSpId=CONCUR&IdpAdapterId=IWA">EOL</a> | 
         <a href="https://github.boozallencsn.com">CSN</a> | 
-        <a href="https://outlook.com/owa/bah.com">Webmail</a> | 
+        <a href="https://outlook.office365.com/owa/?realm=bah.com">Webmail</a> | 
+        <a href="https://outlook.office365.com/owa/?realm=bah.com&path=/calendar/view/Week">Calendar</a> | 
         <a href="https://access.bah.com/my.policy">Access</a> | 
         <a href="https://portal.office.com/">Office Portal</a> |
         
