--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>        
+        html {
+            font-size:20px;
+            font-size:5vmin;
+        }
+        a {
+            color: #000000;
+            text-decoration: none;
+            background-color: #ececec; 
+        }
+    </style>
     <title>Homepage</title>
     <!-- Simple clock from http://www.w3schools.com/js/tryit.asp?filename=tryjs_timing_clock -->
     <script>
