Close style bracket + large font for mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
             font-size:20px;
             font-size:6vmin;
         }
+        @media(min-width:40em) {
+            html {
+                font-size: 16px;
+            }
         a {
             color: #000000;
             text-decoration: none;
@@ -17,6 +21,7 @@
         a: hover {
             color: #00257c;
             background-color: #ffe7e7;
+        }
     </style>
     <title>Homepage</title>
     <!-- Simple clock from http://www.w3schools.com/js/tryit.asp?filename=tryjs_timing_clock -->
