Adjust font + additional button formatting

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <style>        
         html {
-            font-size:20px;
+            font-size:24px;
             font-size:6vmin;
         }
         @media(min-width:40em) {
             html {
-                font-size: 16px;
+                font-size: 24px;
             }
         }
         a {
@@ -17,7 +17,10 @@
             padding: 2px 3px 3px 2px;
             background-color: #ececec; 
             outline: none;
-            border: 0px solid #444444;
+            border-top: 1px solid #CCCCCC;
+            border-right: 1px solid #333333;
+            border-bottom: 1px solid #333333;
+            border-left: 1px solid #CCCCCC;
         }
         a: hover {
             color: #00257c;
