More button formatting

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             color: #00257c;
             background-color: #ffe7e7;
         }
+        a:onclick {
+            color: #ffe7e7;
+            background-color #00257c;
+            border-top: 1px solid #333333;
+            border-right: 1px solid #CCCCCC;
+            border-bottom: 1px solid #CCCCCC;
+            border-left: 1px solid #333333;
+        }
     </style>
     <title>Homepage</title>
     <!-- Simple clock from http://www.w3schools.com/js/tryit.asp?filename=tryjs_timing_clock -->
