--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             color: #00257c;
             background-color: #ffe7e7;
         }
-        a:onclick {
+        a:active {
             color: #ffe7e7;
             background-color #00257c;
             border-top: 1px solid #333333;
