Update stronger negative link color

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
         a:hover {
             color: #00257c;
-            background-color: #ffe7e7;
+            background-color: #000000;
         }
         a:active {
             color: #ffe7e7;
