More color fixes

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         }
         a:hover {
             color: #00257c;
-            background-color: #000000;
+            background-color: #ffe7e7;
         }
         a:active {
             color: #ffe7e7;
-            background-color #00257c;
+            background-color #000000;
             border-top: 1px solid #333333;
             border-right: 1px solid #CCCCCC;
             border-bottom: 1px solid #CCCCCC;
