--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
         a:active {
             color: #ffe7e7;
-            background-color #000000;
+            background-color: #000000;
             border-top: 1px solid #333333;
             border-right: 1px solid #CCCCCC;
             border-bottom: 1px solid #CCCCCC;
