--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             }
         }
         p {
-            line-height: 1.3;
+            line-height: 1.7;
         }
         a {
             color: #000000;
@@ -33,6 +33,7 @@
             background-color: #ffe7e7;
         }
         a:active {
+            background-color: #c4c4c4;
             border-top: 1px solid #333333;
             border-right: 1px solid #CCCCCC;
             border-bottom: 1px solid #CCCCCC;
