--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             border-right: 1px solid #333333;
             border-bottom: 1px solid #333333;
             border-left: 1px solid #CCCCCC;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         a:hover {
             color: #00257c;
