--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
                 font-size: 24px;
             }
         }
+        body {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         p {
             line-height: 2.0;
         }
@@ -27,10 +32,6 @@
             border-right: 1px solid #333333;
             border-bottom: 1px solid #333333;
             border-left: 1px solid #CCCCCC;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
         }
         a:hover {
             color: #00257c;
