--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             }
         }
         body {
-            position: fixed;
+            position: static;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
