Added hr section divider

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         }
         div.view-vertical-center {
             position: relative;
-        }
-        p {
             line-height: 2.0;
+        }
+        hr {
+            color: #f0f0f0;
+            width: 70%;
         }
         a {
             color: #000000;
@@ -49,20 +51,21 @@
 
 <body>
   <div class="view-vertical-center"><center>
-    <p>
         <a href="https://weather.com/weather/hourbyhour/l/02138:4:US">Hourly MA</a>
         <a href="http://www.weather.com/weather/tenday/02138">10-day MA</a>
         <a href="http://www.mln.lib.ma.us/">Library</a>
         <a href="http://www.mbta.com/rider_tools/realtime_bus/?r=73&d=73_1_var1&s=2103&a=mbta&ts=2104">Bus</a>
 
-    <br>
+    <hr>
+
         <a href="https://keep.google.com/#home">Keep</a>
         <a href="https://www.messenger.com/">Messenger</a>
         <a href="https://drive.google.com/drive/my-drive">Drive</a>
         <a href="https://mail.google.com/">Gmail</a>
         <a href="https://calendar.google.com/">Calendar</a>
 
-    <br>
+    <hr>
+
         <a href="https://groupme.com/">GroupMe</a>
         <a href="https://mail.google.com/tasks/ig?pli=1">Tasks</a>
         <a href="https://www.facebook.com">Facebook</a>
@@ -70,13 +73,15 @@
         <a href="https://github.com/">GitHub</a>
         <a href="https://www.sharelatex.com/project">ShareTex</a>
 
-    <br>
+    <hr>
+
         <a href="https://www.google.com/#q=red+sox">Red Sox</a>
         <a href="https://www.google.com/#q=celtics">Celtics</a>
         <a href="https://www.google.com/#q=patriots">Patriots</a>
         <a href="https://www.google.com/#q=arsenal">Arsenal</a>
 
-    <br>
+    <hr>
+
         <a href="https://tolconnected.bah.com/">TOL</a>
         <a href="https://sso.bah.com/idp/startSSO.ping?PartnerSpId=CONCUR&IdpAdapterId=IWA">EOL</a>
         <a href="https://github.boozallencsn.com">CSN</a>
@@ -86,14 +91,14 @@
         <a href="https://portal.office.com/">Office Portal</a>
 
 
-    <br>
+    <hr>
+
         <a href="https://www.myworkday.com/bah/d/home.htmld">[I] Workday</a>
         <a href="https://bah.learn.taleo.net">[I] Learn</a>
         <a href="https://filetransfer.bah.com/">[I] File Transfer</a>
         <a href="https://boozallen.onedrive.com/">OneDrive</a>
         <a href="http://boozallen.sharepoint.com/">Old Wifi</a>
 
-    </p>
   </center></div>
 </body>
 </html>
